<resources>
    <string name="app_name">GastosApp</string>
    <string name="concept">Concepto:</string>
    <string name="amount">Monto:</string>
    <string name="classification">Clasificación:</string>
    <string name="add_button">Añadir</string>
    <string name="date">Fecha:</string>

    <string name="button_select_date">Elegir</string>
    <string name="button_save">Guardar</string>

    <string name="titleConfiguration">Configuración</string>
    <string name="title_activity_add_classification">ActivityAddClassification</string>
    <string name="add_new_category">Añadir Nueva Categoria</string>

    <string name="classification_name">Clasificacion:</string>
    <string name="classification_limit">Limite:</string>

    <string name="descriptionLimitTitle">Limite de Gastos General</string>
    <string name="descriptionLimit">Cantidad total de Gastos que se quieren tener independientemente de su clasificacion</string>
    <string name="tv_limit">Limite:</string>
    <string name="number_limit">100</string>

    <string name="button_delete">Eliminar</string>

    <string name="expenses">Gastos Hechos</string>
    <string name="reports">Reportes</string>

    <string name="general_report">Reporte General</string>
    <string name="classification_report">Reporte por Clasificacion</string>
    <string name="date_report">Reporte por Fecha</string>
    <string name="total_expense">Gasto Total:</string>
    <string name="example_total">100.0</string>

    <string name="date1">YYYY-MM-DD</string>
    <string name="date2">2019-07-12</string>
</resources>
