<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDateReport">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/classification_report"
        android:textSize="20sp"
        tools:text="@string/date_report" />

    <ListView
        android:id="@+id/listView_date_report"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="88dp" />

    <TextView
        android:id="@+id/txt_total_classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginBottom="22dp"
        android:text="@string/example_total"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_total_classification"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:text="@string/total_expense"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ic_search_black_24dp"
        android:onClick="search" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView_date_report"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginBottom="-88dp"
        android:ems="10"
        android:hint="@string/date1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="62dp"
        android:layout_toEndOf="@+id/editText"
        android:layout_toRightOf="@+id/editText"
        android:ems="10"
        android:hint="@string/date1"
        android:inputType="textPersonName" />

</RelativeLayout>