<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.ActivityEditClassification">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="74dp"
        android:text="@string/classification_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:ems="10"
        android:hint="Deporte"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/button9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-33dp"
        android:layout_marginTop="130dp"
        android:text="@string/classification_limit"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_classification_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_classification"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:hint="8"
        android:inputType="number" />

    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignEnd="@+id/textView"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginBottom="146dp"-->
        <!--android:onClick="updateClassification"-->
        <!--android:text="@string/button_save"-->
        <!--android:textSize="20sp" />-->

    <!--<Button-->
        <!--android:id="@+id/button4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignTop="@+id/button"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginStart="97dp"-->
        <!--android:layout_marginLeft="97dp"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:layout_marginEnd="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--android:layout_toEndOf="@+id/button"-->
        <!--android:layout_toRightOf="@+id/button"-->
        <!--android:onClick="deleteClassification"-->
        <!--android:text="@string/button_delete"-->
        <!--android:textSize="20sp" />-->

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="115dp"
        android:onClick="deleteClassification"
        android:text="@string/button_delete"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginBottom="114dp"
        android:onClick="updateClassification"
        android:text="@string/button_save"
        android:textSize="20dp" />


</RelativeLayout>